--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
               <div class="item-img">
                 <img src="img/ser01.png">
               </div>
-              <h3 class="pad-bt15">Prototyping and Greenfield Development</h3>
-              <p>We will translate your raw ideas into applications that are easy to use and easy to improve upon.</p>
+              <h3 class="pad-bt15">Prototyping</h3>
+              <p>We will translate your raw ideas into applications that are easy to use and easy to improve upon. Our goal is to find the most efficent solution to your problem.</p>
             </div>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
@@ -85,7 +85,7 @@
                 <img src="img/ser02.png">
               </div>
               <h3 class="pad-bt15">Maintenance</h3>
-              <p>We can keep on adding new features to existing applications, while keeping it updated.</p>
+              <p>We can keep on adding new features to existing applications, while ensuring it stays up-to-date with best practices and latest trends.</p>
             </div>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
@@ -93,8 +93,8 @@
               <div class="item-img">
                 <img src="img/ser03.png">
               </div>
-              <h3 class="pad-bt15">Cost effective</h3>
-              <p>TheLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <h3 class="pad-bt15">Problem Identification</h3>
+              <p>The first step to solving the problem is to first figure out what the problem is. We will determine what your requirements are, and how likely they are to change.</p>
             </div>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
@@ -102,8 +102,8 @@
               <div class="item-img">
                 <img src="img/ser04.png">
               </div>
-              <h3 class="pad-bt15">Secure</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <h3 class="pad-bt15">Security</h3>
+              <p>We will make sure that your applications follow security best practices so that your privacy and personal data is well-protected.</p>
             </div>
           </div>
         </div>
@@ -116,35 +116,27 @@
         <div class="row">
           <div class="col-md-12 text-center">
             <h2 class="service-title pad-bt15">Tariq Ali</h2>
-            <p class="sub-title pad-bt15">Using his experience in web development, </p>
+            <p class="sub-title pad-bt15">After building websites for a nonprofit organization, Tariq Ali transitioned into a career as a Software Engineer, specializing in full-stack web development. He has 1.5 years of professional experience and is the current owner of Ramal Tech.</p>
             <hr class="bottom-line">
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="service-item">
-              <h3><span>D</span>esign And Developement</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <a href="">learn more...</a>
+              <a href="https://tra38.github.io"><h3><span>P</span>ersonal Website</h3></a>
             </div>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="service-item">
-              <h3><span>M</span>aintenance</h3>
-              <p>We help implement .</p>
-              <a href="">learn more...</a>
+              <a href="https://tra38.github.io/resume.pdf"><h3><span>R</span>esume</h3></a>
             </div>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="service-item">
-              <h3><span>S</span>eo Optimization</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <a href="">learn more...</a>
+              <a href="https://tra38.github.io/blog"><h3><span>B</span>log</h3></a>
             </div>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="service-item">
-              <h3><span>D</span>igital Marketing</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <a href="">Learn more...</a>
+              <a href="https://github.com/tra38"><h3><span>G</span>itHub Repos</h3></a>
             </div>
           </div>
         </div>
@@ -155,66 +147,17 @@
         <div class="row">
           <div class="col-md-12 text-center white">
             <h2 class="service-title pad-bt15">Keep in touch with us</h2>
-            <p class="sub-title pad-bt15">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p class="sub-title pad-bt15">Our email address is contact@ramaltech.com. Or you can call us at 480-580-8960. We look forward to working with you.</p>
             <hr class="bottom-line white-bg">
           </div>
-          <div class="col-md-6 col-sm-6 col-xs-12">
-            <div class="loction-info white">
-              <p><i class="fa fa-map-marker fa-fw pull-left fa-2x"></i>A99 Adam Street<br>Texas, TX 555072</p>
-              <p><i class="fa fa-envelope-o fa-fw pull-left fa-2x"></i>info@baker.com</p>
-              <p><i class="fa fa-phone fa-fw pull-left fa-2x"></i>+41 5787 2323</p>
-            </div>
-          </div>
-          <div class="col-md-6 col-sm-6 col-xs-12">
-            <div class="contact-form">
-                <div id="sendmessage">Your message has been sent. Thank you!</div>
-                <div id="errormessage"></div>
-                <form action="" method="post" role="form" class="contactForm">
-                    <div class="col-md-6 padding-right-zero">
-                        <div class="form-group">
-                            <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                            <div class="validation"></div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-                            <div class="validation"></div>
-                        </div>
-                    </div>
-                    <div class="col-md-12">
-                        <div class="form-group">
-                            <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                            <div class="validation"></div>
-                        </div>
-                    </div>
-                    <div class="col-md-12">
-                      <div class="form-group">
-                            <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-                            <div class="validation"></div>
-                        </div>
-                      <button type="submit" class="btn btn-primary btn-submit">SEND NOW</button>
-                    </div>
-                </form>
-
-            </div>
-          </div>
-        </div>
-      </div>
     </section>
     <!---->
     <!---->
     <footer id="footer">
       <div class="container">
         <div class="row text-center">
-          <p>&copy; Ramal Tech. All Rights Reserved.</p>
+          <p>&copy; 2017, Ramal Tech. All Rights Reserved.</p>
           <div class="credits">
-            <!--
-                All the links in the footer should remain intact.
-                You can delete the links only if you purchased the pro version.
-                Licensing information: https://bootstrapmade.com/license/
-                Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Baker
-            -->
             This website uses the <a href="https://bootstrapmade.com/baker-free-onepage-bootstrap-theme/">Baker</a> theme, designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>.
         </div>
         </div>
